<resources>
    <string name="app_name">MyCalculator</string>
    <string name="c">C</string>
    <string name="share">/</string>
    <string name="multiply">X</string>
    <string name="del">del</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="min">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plas">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="pisent">%</string>
    <string name="_0">0</string>
    <string name="point">,</string>
    <string name="equally">=</string>
    <string name="action_settings">settings</string>
</resources>