<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5A5858"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            app:srcCompat="@drawable/imageandroid" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|right"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textAct"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:hint="0"
                android:inputType="textShortMessage"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="#070707"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="0"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnC"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnC"
                    android:text="@string/c"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn7"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn4"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn1"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPerecent"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/pisent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnShare"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/share"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn8"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn5"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn2"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn0"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMultiply"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/multiply"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn9"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn6"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn3"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/_3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPoint"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/point"
                    android:textColor="@color/white"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelente"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/del"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMin"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/min"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPlas"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="metNumbers"
                    android:text="@string/plas"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEqually"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/equally"
                    android:textColor="@color/white"
                    android:textSize="@dimen/buttonCalkulator"
                    app:backgroundTint="@color/hint_button" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/themeBlack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_theme_black" />

    <ImageView
        android:id="@+id/themeWhile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_theme_while" />
</RelativeLayout>